--- a/index.html
+++ b/index.html
@@ -11,80 +11,50 @@
 </head>
 
 <body>
+
   <header class="header">
-    <div class="header-contacts">
-      <svg class="header-contacts--svg" width="18" height="18" viewBox="0 0 18 22" fill="none"
-        xmlns="http://www.w3.org/2000/svg">
-        <path fill-rule="evenodd" clip-rule="evenodd"
-          d="M1.61967 0.0527838C1.2459 0.133671 0.940376 0.306712 0.634031 0.610909C0.321235 0.921514 0.153771 1.21819 0.0701915 1.60981C-0.0243015 2.05269 -0.022959 19.3872 0.0716206 19.8305C0.23891 20.6147 0.806821 21.3433 1.52522 21.6954C2.202 22.0271 1.62751 22.0069 10.0492 21.9945C17.5814 21.9834 17.5823 21.9834 17.7018 21.8947C17.7676 21.8459 17.8616 21.7526 17.9107 21.6873L18 21.5685V12.3724V3.17625L17.9107 3.05748C17.8616 2.99216 17.7677 2.89884 17.7019 2.85008C17.5893 2.76648 17.5157 2.76067 16.4183 2.74868L15.254 2.73599L15.2413 1.57992C15.2292 0.490159 15.2233 0.417098 15.1391 0.30525C15.09 0.239972 14.9961 0.146701 14.9303 0.0979361C14.8108 0.0093946 14.8018 0.00926559 8.3505 0.00174021C3.03793 -0.00449511 1.84222 0.00457835 1.61967 0.0527838ZM13.8643 2.05187V2.7399H7.90839C1.39855 2.7399 1.78207 2.75521 1.55436 2.48649C1.26807 2.14858 1.39574 1.59983 1.80151 1.42434C1.90917 1.37777 3.03711 1.36689 7.89895 1.36551L13.8643 1.36383V2.05187ZM9.59593 5.55672C10.6273 5.77367 11.502 6.64231 11.7205 7.66641C12.1348 9.60826 10.3878 11.343 8.43222 10.9316C7.64267 10.7656 6.90881 10.2016 6.55435 9.4885C6.14096 8.65683 6.14096 7.83153 6.55435 6.99987C7.09979 5.90259 8.3715 5.29918 9.59593 5.55672ZM11.2417 12.4729C12.5361 12.8487 13.4114 13.7251 13.7664 15.0007C13.8299 15.2292 13.8427 15.4561 13.8427 16.3576C13.8427 17.3839 13.838 17.4464 13.7534 17.559C13.7042 17.6244 13.6103 17.7177 13.5445 17.7665C13.4255 17.8547 13.4014 17.8552 9.01407 17.8552C4.62673 17.8552 4.60261 17.8547 4.48365 17.7665C4.19246 17.5506 4.18687 17.5284 4.17133 16.5298C4.15595 15.5425 4.19359 15.1766 4.36066 14.6888C4.68173 13.7514 5.53329 12.8911 6.44145 12.5865C7.04479 12.3842 7.15383 12.3761 9.12234 12.3875C10.7413 12.3968 11.0181 12.408 11.2417 12.4729Z"
-          fill="#005BFE" />
-      </svg>
-      <span class="header-contacts--text">Книга контактов</span>
-    </div>
-    <div class="header-button">
-      <button type="button" class="header-button--red" id="contactButton"><span> Добавить контакт</span><span><svg
-            width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <g clip-path="url(#clip0_4060_65)">
-              <path d="M14.25 9.75H9.75V14.25H8.25V9.75H3.75V8.25H8.25V3.75H9.75V8.25H14.25V9.75Z" fill="white" />
-            </g>
-            <defs>
-              <clipPath id="clip0_4060_65">
-                <rect width="18" height="18" fill="white" />
-              </clipPath>
-            </defs>
-          </svg>
-        </span> </button>
-      <button type="button" class="header-button--blue" id="groupButton">Группы</button>
+    <div class="container">
+      <div class="header-contacts">
+        <svg class="header-contacts--svg" width="18" height="18" viewBox="0 0 18 22" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M1.61967 0.0527838C1.2459 0.133671 0.940376 0.306712 0.634031 0.610909C0.321235 0.921514 0.153771 1.21819 0.0701915 1.60981C-0.0243015 2.05269 -0.022959 19.3872 0.0716206 19.8305C0.23891 20.6147 0.806821 21.3433 1.52522 21.6954C2.202 22.0271 1.62751 22.0069 10.0492 21.9945C17.5814 21.9834 17.5823 21.9834 17.7018 21.8947C17.7676 21.8459 17.8616 21.7526 17.9107 21.6873L18 21.5685V12.3724V3.17625L17.9107 3.05748C17.8616 2.99216 17.7677 2.89884 17.7019 2.85008C17.5893 2.76648 17.5157 2.76067 16.4183 2.74868L15.254 2.73599L15.2413 1.57992C15.2292 0.490159 15.2233 0.417098 15.1391 0.30525C15.09 0.239972 14.9961 0.146701 14.9303 0.0979361C14.8108 0.0093946 14.8018 0.00926559 8.3505 0.00174021C3.03793 -0.00449511 1.84222 0.00457835 1.61967 0.0527838ZM13.8643 2.05187V2.7399H7.90839C1.39855 2.7399 1.78207 2.75521 1.55436 2.48649C1.26807 2.14858 1.39574 1.59983 1.80151 1.42434C1.90917 1.37777 3.03711 1.36689 7.89895 1.36551L13.8643 1.36383V2.05187ZM9.59593 5.55672C10.6273 5.77367 11.502 6.64231 11.7205 7.66641C12.1348 9.60826 10.3878 11.343 8.43222 10.9316C7.64267 10.7656 6.90881 10.2016 6.55435 9.4885C6.14096 8.65683 6.14096 7.83153 6.55435 6.99987C7.09979 5.90259 8.3715 5.29918 9.59593 5.55672ZM11.2417 12.4729C12.5361 12.8487 13.4114 13.7251 13.7664 15.0007C13.8299 15.2292 13.8427 15.4561 13.8427 16.3576C13.8427 17.3839 13.838 17.4464 13.7534 17.559C13.7042 17.6244 13.6103 17.7177 13.5445 17.7665C13.4255 17.8547 13.4014 17.8552 9.01407 17.8552C4.62673 17.8552 4.60261 17.8547 4.48365 17.7665C4.19246 17.5506 4.18687 17.5284 4.17133 16.5298C4.15595 15.5425 4.19359 15.1766 4.36066 14.6888C4.68173 13.7514 5.53329 12.8911 6.44145 12.5865C7.04479 12.3842 7.15383 12.3761 9.12234 12.3875C10.7413 12.3968 11.0181 12.408 11.2417 12.4729Z"
+            fill="#005BFE" />
+        </svg>
+        <span class="header-contacts--text">Книга контактов</span>
+      </div>
+      <div class="header-button">
+        <button type="button" class="header-button--red" id="contactButton"><span> Добавить контакт</span><span><svg
+              width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0_4060_65)">
+                <path d="M14.25 9.75H9.75V14.25H8.25V9.75H3.75V8.25H8.25V3.75H9.75V8.25H14.25V9.75Z" fill="white" />
+              </g>
+              <defs>
+                <clipPath id="clip0_4060_65">
+                  <rect width="18" height="18" fill="white" />
+                </clipPath>
+              </defs>
+            </svg>
+          </span> </button>
+        <button type="button" class="header-button--blue" id="groupButton">Группы</button>
+      </div>
     </div>
   </header>
 
-  <main>
-    <span class="main-text"> Cписок контактов пуст</span>
-    <!-- вариант с непустым списком -->
-
+  <main class="container">
     <div class="main-container">
+      <!-- <span class="main-text"> Cписок контактов пуст</span> -->
+      <!-- вариант с непустым списком -->
       <button class="main-dropdown_button">
         Друзья
+        <svg class="chevron-icon" width="13" height="8" viewBox="0 0 13 8" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" fill="#9499a1"
+            d="M10.885 7.70502L6.29498 3.12502L1.70498 7.70502L0.294983 6.29502L6.29498 0.295017L12.295 6.29502L10.885 7.70502Z" />
+        </svg>
+
       </button>
-      <hr>
-      <div class="main-option-container">
-        <div class="option">
-          <span class="main-container--name">Фамилия Имя Отчество</span>
-
-          <div class="main-container--buttons">
-            <span class="main-container--number">+7 (ХХХ) ХХХ - ХХ - ХХ</span>
-            <button type="button" class="item-icon item-icon--blue">
-              <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect opacity="0.1" x="0.5" y="0.5" width="37" height="37" rx="5.5" stroke="black" />
-                <g clip-path="url(#clip0_1894_95)">
-                  <path
-                    d="M10 24.2501V28.0001H13.75L24.81 16.9401L21.06 13.1901L10 24.2501ZM27.71 14.0401C28.1 13.6501 28.1 13.0201 27.71 12.6301L25.37 10.2901C24.98 9.90006 24.35 9.90006 23.96 10.2901L22.13 12.1201L25.88 15.8701L27.71 14.0401Z"
-                    fill="black" />
-                </g>
-                <defs>
-                  <clipPath id="clip0_1894_95">
-                    <rect width="24" height="24" fill="white" transform="translate(7 7)" />
-                  </clipPath>
-                </defs>
-              </svg>
-            </button>
-            <button type="button" class="item-icon"><svg width="38" height="38" viewBox="0 0 38 38" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <rect x="0.5" y="0.5" width="37" height="37" rx="5.5" />
-                <g clip-path="url(#clip0_1894_238)">
-                  <path
-                    d="M12.6666 26.3889C12.6666 27.55 13.6166 28.5 14.7778 28.5H23.2222C24.3833 28.5 25.3333 27.55 25.3333 26.3889V13.7222H12.6666V26.3889ZM15.2633 18.8733L16.7516 17.385L19 19.6228L21.2378 17.385L22.7261 18.8733L20.4883 21.1111L22.7261 23.3489L21.2378 24.8372L19 22.5994L16.7622 24.8372L15.2739 23.3489L17.5116 21.1111L15.2633 18.8733ZM22.6944 10.5556L21.6389 9.5H16.3611L15.3055 10.5556H11.6111V12.6667H26.3889V10.5556H22.6944Z" />
-                </g>
-                <defs>
-                  <clipPath id="clip0_1894_238">
-                    <rect width="25.3333" height="25.3333" fill="white" transform="translate(6.33325 6.33331)" />
-                  </clipPath>
-                </defs>
-              </svg>
-            </button>
-          </div>
-        </div>
-        <div class="option">
+      <ul class="main-option-container">
+        <li class="option">
           <span class="main-container--name">Фамилия Имя Отчество</span>
           <div class="main-container--buttons">
             <span class="main-container--number">+7 (ХХХ) ХХХ - ХХ - ХХ</span>
@@ -118,11 +88,47 @@
               </svg>
             </button>
           </div>
-        </div>
-      </div>
-
-      <!-- модалка с группами контактов -->
+        </li>
+        <li class="option">
+          <span class="main-container--name">Фамилия Имя Отчество</span>
+          <div class="main-container--buttons">
+            <span class="main-container--number">+7 (ХХХ) ХХХ - ХХ - ХХ</span>
+            <button type="button" class="item-icon item-icon--blue">
+              <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect opacity="0.1" x="0.5" y="0.5" width="37" height="37" rx="5.5" stroke="black" />
+                <g clip-path="url(#clip0_1894_95)">
+                  <path
+                    d="M10 24.2501V28.0001H13.75L24.81 16.9401L21.06 13.1901L10 24.2501ZM27.71 14.0401C28.1 13.6501 28.1 13.0201 27.71 12.6301L25.37 10.2901C24.98 9.90006 24.35 9.90006 23.96 10.2901L22.13 12.1201L25.88 15.8701L27.71 14.0401Z"
+                    fill="black" />
+                </g>
+                <defs>
+                  <clipPath id="clip0_1894_95">
+                    <rect width="24" height="24" fill="white" transform="translate(7 7)" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </button>
+            <button type="button" class="item-icon"><svg width="38" height="38" viewBox="0 0 38 38" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <rect x="0.5" y="0.5" width="37" height="37" rx="5.5" />
+                <g clip-path="url(#clip0_1894_238)">
+                  <path
+                    d="M12.6666 26.3889C12.6666 27.55 13.6166 28.5 14.7778 28.5H23.2222C24.3833 28.5 25.3333 27.55 25.3333 26.3889V13.7222H12.6666V26.3889ZM15.2633 18.8733L16.7516 17.385L19 19.6228L21.2378 17.385L22.7261 18.8733L20.4883 21.1111L22.7261 23.3489L21.2378 24.8372L19 22.5994L16.7622 24.8372L15.2739 23.3489L17.5116 21.1111L15.2633 18.8733ZM22.6944 10.5556L21.6389 9.5H16.3611L15.3055 10.5556H11.6111V12.6667H26.3889V10.5556H22.6944Z" />
+                </g>
+                <defs>
+                  <clipPath id="clip0_1894_238">
+                    <rect width="25.3333" height="25.3333" fill="white" transform="translate(6.33325 6.33331)" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </button>
+          </div>
+        </li>
+      </ul>
+    </div>
   </main>
+
+  <!-- модалка с группами контактов -->
   <div id="openGroupModal" class="modal">
     <div class="modal-content">
       <div class="modal-header">
@@ -145,26 +151,10 @@
       </div>
       <div class="modal-body">
         <ul class="group-list">
-          <li class="group-list--item">
-            <div class="item-name"><span>Friends</span></div>
-            <button type="button" class="item-icon"><svg width="38" height="38" viewBox="0 0 38 38" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <rect x="0.5" y="0.5" width="37" height="37" rx="5.5" />
-                <g clip-path="url(#clip0_1894_238)">
-                  <path
-                    d="M12.6666 26.3889C12.6666 27.55 13.6166 28.5 14.7778 28.5H23.2222C24.3833 28.5 25.3333 27.55 25.3333 26.3889V13.7222H12.6666V26.3889ZM15.2633 18.8733L16.7516 17.385L19 19.6228L21.2378 17.385L22.7261 18.8733L20.4883 21.1111L22.7261 23.3489L21.2378 24.8372L19 22.5994L16.7622 24.8372L15.2739 23.3489L17.5116 21.1111L15.2633 18.8733ZM22.6944 10.5556L21.6389 9.5H16.3611L15.3055 10.5556H11.6111V12.6667H26.3889V10.5556H22.6944Z" />
-                </g>
-                <defs>
-                  <clipPath id="clip0_1894_238">
-                    <rect width="25.3333" height="25.3333" fill="white" transform="translate(6.33325 6.33331)" />
-                  </clipPath>
-                </defs>
-              </svg>
-            </button>
-          </li>
+
         </ul>
-        <div class="group-list--item hidden" id="itemInput">
-          <input type="text" class="item-name item-name--input" placeholder="Введите название" />
+        <div class="group-list--item hidden" id="inputWrapper">
+          <input type="text" id="addGroupInput" class="item-name item-name--input" placeholder="Введите название" />
           <button type="button" class="item-icon"><svg width="38" height="38" viewBox="0 0 38 38" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <rect x="0.5" y="0.5" width="37" height="37" rx="5.5" />
@@ -211,8 +201,10 @@
       </div>
       <div class="modal-body">
         <form class="group-list form">
-          <input class=" group-list--item item-name item-name--input form-item" placeholder="Введите ФИО">
-          <input class="form-item group-list--item item-name item-name--input" placeholder="Введите номер">
+          <input type="text" class=" group-list--item item-name item-name--input form-item" placeholder="Введите ФИО"
+            maxlength="30">
+          <input type="tel" pattern="" class="form-item group-list--item item-name item-name--input"
+            placeholder="Введите номер">
           <select class="form-item group-list--item item-name item-name--input">
             <option value="" disabled selected>Выберите группу</option>
             <option value="hurr">Durr</option>
@@ -224,9 +216,6 @@
       </div>
     </div>
   </div>
-
-
-
   <script src="./main.js"></script>
 </body>
 
