added delete function

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
       </div>
       <div class="modal-body">
-        <ul class="group-list">
+        <ul class="group-list" id="groupList">
 
         </ul>
         <div class="group-list--item hidden" id="inputWrapper">
