rendering options from LS

--- a/index.html
+++ b/index.html
@@ -203,11 +203,10 @@
         <form class="group-list form">
           <input type="text" class=" group-list--item item-name item-name--input form-item" placeholder="Введите ФИО"
             maxlength="30">
-          <input type="tel" pattern="" class="form-item group-list--item item-name item-name--input"
-            placeholder="Введите номер">
-          <select class="form-item group-list--item item-name item-name--input">
-            <option value="" disabled selected>Выберите группу</option>
-            <option value="hurr">Durr</option>
+          <input type="text" class="form-item group-list--item item-name item-name--input" placeholder="Введите номер">
+          <select id="dropdownGroup" class="form-item group-list--item item-name item-name--input"
+            placeholder="Выберите группу">
+            <option disabled selected>Выберите группу</option>
           </select>
         </form>
       </div>
