add contact masks, correct contact rendering in main tag

--- a/index.html
+++ b/index.html
@@ -118,9 +118,10 @@
       </div>
       <div class="modal-body">
         <form class="group-list form">
-          <input type="text" class=" group-list--item item-name item-name--input form-item" placeholder="Введите ФИО"
-            maxlength="30">
-          <input type="text" class="form-item group-list--item item-name item-name--input" placeholder="Введите номер">
+          <input type="text" id="contactName" class=" group-list--item item-name item-name--input form-item"
+            placeholder="Введите ФИО" maxlength="50">
+          <input type="text" id="contactPhone" class="form-item group-list--item item-name item-name--input"
+            placeholder="Введите номер">
           <select id="dropdownGroup" class="form-item group-list--item item-name item-name--input">
             <option disabled selected>Выберите группу</option>
           </select>
