--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </ul>
         <div class="group-list--item hidden" id="inputWrapper">
           <input type="text" id="addGroupInput" class="item-name item-name--input" placeholder="Введите название" />
-          <button type="button" data-delete=true class="item-icon"><svg width="38" height="38" viewBox="0 0 38 38"
+          <button type="button" id="deleteGroupInput" class="item-icon"><svg width="38" height="38" viewBox="0 0 38 38"
               fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect x="0.5" y="0.5" width="37" height="37" rx="5.5" />
               <g clip-path="url(#clip0_1894_238)">
