--- a/index.html
+++ b/index.html
@@ -30,14 +30,7 @@
         <button type="button" class="header-button--red" id="contactButton" data-bs-toggle="offcanvas"
           data-bs-target="#openContactButton" aria-controls="openContactButton"><span> Добавить контакт</span><span><svg
               width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <g clip-path="url(#clip0_4060_65)">
-                <path d="M14.25 9.75H9.75V14.25H8.25V9.75H3.75V8.25H8.25V3.75H9.75V8.25H14.25V9.75Z" fill="white" />
-              </g>
-              <defs>
-                <clipPath id="clip0_4060_65">
-                  <rect width="18" height="18" fill="white" />
-                </clipPath>
-              </defs>
+              <path d="M14.25 9.75H9.75V14.25H8.25V9.75H3.75V8.25H8.25V3.75H9.75V8.25H14.25V9.75Z" fill="white" />
             </svg>
           </span> </button>
         <button type="button" class="header-button--blue" id="groupButton" data-bs-toggle="offcanvas"
@@ -51,13 +44,14 @@
   </main>
 
   <!--модалка с добавлеием контактов-->
-  <div class="modal offcanvas offcanvas-start" tabindex="-1" id="openContactButton" aria-labelledby="openContactButton">
+  <div class="modal offcanvas offcanvas-start " tabindex="-1" id="openContactButton"
+    aria-labelledby="openContactButton">
     <div class="modal_header offcanvas-header">
       <h3 class="modal_title">Добавление контакта</h3>
-      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      <button type="button" id='closeContact' class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body d-flex flex-column justify-content-between">
-      <form class="group-list form">
+      <form class="group-list form" name="form">
         <input type="text" id="contactName" class=" group-list--item item-name item-name--input form-item"
           placeholder="Введите ФИО" maxlength="50">
         <input type="text" id="contactPhone" class="form-item group-list--item item-name item-name--input"
@@ -73,11 +67,11 @@
   </div>
 
   <!-- модалка с группами контактов -->
-  <div class="modal offcanvas offcanvas-start" tabindex="-1" id="openGroupModal"
+  <div class="offcanvas offcanvas-start modal" tabindex="-1" id="openGroupModal"
     aria-labelledby="offcanvasExampleLabel">
     <div class="modal_header offcanvas-header">
       <h3 class="modal_title">Группы контактов</h3>
-      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      <button type="button" id="closeGroup" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body d-flex flex-column justify-content-between">
       <div class="d-flex flex-column">
@@ -86,18 +80,11 @@
         </ul>
         <div class="group-list--item hidden" id="inputWrapper">
           <input type="text" id="addGroupInput" class="item-name item-name--input" placeholder="Введите название" />
-          <button type="button" id="deleteGroupInput" class="item-icon"><svg width="38" height="38" viewBox="0 0 38 38"
-              fill="none" xmlns="http://www.w3.org/2000/svg">
+          <button type="button" id="deleteGroupInput" class="item-icon">
+            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect x="0.5" y="0.5" width="37" height="37" rx="5.5" />
-              <g clip-path="url(#clip0_1894_238)">
-                <path
-                  d="M12.6666 26.3889C12.6666 27.55 13.6166 28.5 14.7778 28.5H23.2222C24.3833 28.5 25.3333 27.55 25.3333 26.3889V13.7222H12.6666V26.3889ZM15.2633 18.8733L16.7516 17.385L19 19.6228L21.2378 17.385L22.7261 18.8733L20.4883 21.1111L22.7261 23.3489L21.2378 24.8372L19 22.5994L16.7622 24.8372L15.2739 23.3489L17.5116 21.1111L15.2633 18.8733ZM22.6944 10.5556L21.6389 9.5H16.3611L15.3055 10.5556H11.6111V12.6667H26.3889V10.5556H22.6944Z" />
-              </g>
-              <defs>
-                <clipPath id="clip0_1894_238">
-                  <rect width="25.3333" height="25.3333" fill="white" transform="translate(6.33325 6.33331)" />
-                </clipPath>
-              </defs>
+              <path
+                d="M12.6666 26.3889C12.6666 27.55 13.6166 28.5 14.7778 28.5H23.2222C24.3833 28.5 25.3333 27.55 25.3333 26.3889V13.7222H12.6666V26.3889ZM15.2633 18.8733L16.7516 17.385L19 19.6228L21.2378 17.385L22.7261 18.8733L20.4883 21.1111L22.7261 23.3489L21.2378 24.8372L19 22.5994L16.7622 24.8372L15.2739 23.3489L17.5116 21.1111L15.2633 18.8733ZM22.6944 10.5556L21.6389 9.5H16.3611L15.3055 10.5556H11.6111V12.6667H26.3889V10.5556H22.6944Z" />
             </svg>
           </button>
         </div>
