--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <link rel="stylesheet" href="./normalize.css" type="text/css">
   <link rel="stylesheet" href="./style.css" type="text/css">
-  <title>TODO</title>
+  <title>Notebook</title>
 </head>
 
 <body>
